# LOP

./: .gitignore  Times.md
.githooks/: download-snapshot.cjs  post-checkout  post-merge
.github/workflows/: snapshot.yml
compiler/: CMakeLists.txt  compile.ps1  compile.sh  package-lock.json  package.json
compiler/PoC/: Conversion.md  GC.md  Object.md  Operations.md  README.md  SelfImplementation.md  Types.md
compiler/input/: binder.lop  boxing.lop  c_emitter.lop  char.lop  conversion.lop  diagnostics.lop  lexer.lop  list.lop  main.lop  panic.lop  parser.lop  scope.lop
compiler/output/: entry.c  fs.c  main.c  main2.c  string_obj.c  string_obj.h
compiler/runtime/: fs.c  gc.c  gc.h  main.c  object.c  object.h  primitive.h
compiler/src/: binder.ts  c_emitter.ts  char.ts  conversion.ts  lexer.ts  main.ts  parser.ts  scope.ts
extensions/vscode/: lop-vscode-0.0.14.vsix  package-lock.json  package.json
extensions/vscode/syntaxes/: lop.tmLanguage.json
